--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@noble/curves": "^1.4.2",
     "@noble/hashes": "^1.4.0",
     "@solana/buffer-layout": "^4.0.1",
+    "@solana/codecs-numbers": "^2.1.0",
     "agentkeepalive": "^4.5.0",
-    "bigint-buffer": "^1.1.5",
     "bn.js": "^5.2.1",
     "borsh": "^0.7.0",
     "bs58": "^4.0.1",
@@ -122,9 +122,9 @@
     "sinon": "^19.0.2",
     "sinon-chai": "^4.0.0",
     "start-server-and-test": "^2.0.4",
-    "typescript": "^5.5.4",
     "tslib": "^2.6.3",
     "tsx": "^4.16.2",
-    "typedoc": "^0.27.0"
+    "typedoc": "^0.27.0",
+    "typescript": "^5.5.4"
   }
 }
